k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: python-monitoring-app
  labels:
    name: python-monitoring-app
    environment: production
