k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-monitoring-app-service
  namespace: python-monitoring-app
  labels:
    app: python-monitoring-app
spec:
  selector:
    app: python-monitoring-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
